refactor: API adjustments
